<resources>
    <string name="app_name">Crime Wave</string>
    <string name="background">Background</string>
    <string name="back">Back</string>
    <string name="filter">filter</string>

    <string name="dialog_ok">Ok</string>
    <string name="view_source">View Source</string>
    <string name="full_screen">Full Screen</string>
    <string name="news_articles">News Articles</string>
    <string name="news_image">News Image</string>
    <string name="loading">Loading</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="shooting_history">Shooting History</string>
    <string name="color_rating_scale">Color Rating Scale</string>
<!--    <string name="banner_id">ca-app-pub-3482826063737432/1983582893</string>-->
    <string name="banner_id">ca-app-pub-2795479226639345/7339565320</string>
    <string name="store">Store</string>

</resources>
