<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_bg0"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background" />
    <com.github.glomadrian.grav.GravView
        android:id="@+id/grav"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
        app:array_colors="@array/Spectral"
        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
        app:regular_cell_size="100"
        app:regular_variance="200"
        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
        app:ball_size="2dp"
        app:animationGenerators="@array/BallWaveAnimations"
        app:side_to_side_min_duration="6000"
        app:side_to_side_max_duration="15000"
        app:side_to_side_direction="downToUp"
        app:shake_variance="50dp"
        app:ball_size_from_size="1dp"
        app:ball_size_to_size="4dp"
        app:shake_direction="horizontal"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <RelativeLayout
            android:id="@+id/rlNews"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:paddingBottom="10dp"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_gravity="start"
                android:id="@+id/ivFullScreen"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_full_screen"
                android:tint="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/full_screen" />
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_toEndOf="@+id/ivFullScreen"
                android:layout_toStartOf="@+id/ivSettings"
                app:tabMode="scrollable"
                app:tabIndicatorColor="@color/white"
                app:tabTextColor="@color/light_grey"
                app:tabSelectedTextColor="@color/white"/>
            <ImageView
                android:id="@+id/ivSettings"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_settings"
                android:tint="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/settings" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/newsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:layoutAnimation="@anim/layout_animation"
                tools:listitem="@layout/item_news"
                android:orientation="horizontal"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/tabLayout"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/emptyCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tabLayout"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="10dp"
                card_view:cardMaxElevation="10dp"
                card_view:cardUseCompatPadding="false"
                card_view:cardPreventCornerOverlap="false"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_bg"
                        android:contentDescription="@string/news_image" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_gradient"
                        android:padding="7dp">
                        <TextView
                            android:id="@+id/txtLoading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="2"
                            android:text="@string/loading"
                            android:ellipsize="end"
                            android:textColor="@color/white"
                            android:textSize="14sp"/>
                    </RelativeLayout>
                    <com.github.ybq.android.spinkit.SpinKitView
                        android:id="@+id/spin_kit"
                        style="@style/SpinKitView.ChasingDots"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        app:SpinKit_Color="@color/colorAccent"
                        android:padding="10dp"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/llMap"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="50dp"
            android:animateLayoutChanges="true"
            app:layout_constraintTop_toBottomOf="@+id/rlNews"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/selectContentLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>